--- a/index.html
+++ b/index.html
@@ -577,7 +577,7 @@ Shopify.routes.root = "/";</script>
 <script id="web-pixels-manager-setup">(function e(e,n,a,t,o,r,i){var s=null!==e,l=("function"==typeof BigInt&&BigInt.toString().indexOf("[native code]")?"modern":"legacy").substring(0,1),c=t.substring(0,1);if(s){window.Shopify=window.Shopify||{};var d=window.Shopify;d.analytics=d.analytics||{};var u=d.analytics;u.replayQueue=[],u.publish=function(e,n,a){u.replayQueue.push([e,n,a])};try{self.performance.mark("wpm:start")}catch(e){}}var p,f,y,h,v,m,w,g,b,_=[a,"/wpm","/",c,r,l,".js"].join("");f=(p={src:_,async:!0,onload:function(){if(e){var a=window.webPixelsManager.init(e);null==n||n(a);var t=window.Shopify.analytics;t.replayQueue.forEach((function(e){var n=e[0],t=e[1],o=e[2];a.publishCustomEvent(n,t,o)})),t.replayQueue=[],t.publish=a.publishCustomEvent,t.visitor=a.visitor}},onerror:function(){var n=(null==e?void 0:e.storefrontBaseUrl)?e.storefrontBaseUrl.replace(/\/$/,""):self.location.origin,a="".concat(n,"/.well-known/shopify/monorail/unstable/produce_batch"),t=JSON.stringify({metadata:{event_sent_at_ms:(new Date).getTime()},events:[{schema_id:"web_pixels_manager_load/2.0",payload:{version:o||"latest",page_url:self.location.href,status:"failed",error_msg:"".concat(_," has failed to load")},metadata:{event_created_at_ms:(new Date).getTime()}}]});try{if(self.navigator.sendBeacon.bind(self.navigator)(a,t))return!0}catch(e){}var r=new XMLHttpRequest;try{return r.open("POST",a,!0),r.setRequestHeader("Content-Type","text/plain"),r.send(t),!0}catch(e){console&&console.warn&&console.warn("[Web Pixels Manager] Got an unhandled error while logging a load error.")}return!1}}).src,y=p.async,h=void 0===y||y,v=p.onload,m=p.onerror,w=document.createElement("script"),g=document.head,b=document.body,w.async=h,w.src=f,v&&w.addEventListener("load",v),m&&w.addEventListener("error",m),g?g.appendChild(w):b?b.appendChild(w):console.error("Did not find a head or body element to append the script")})({shopId: 85368570154,storefrontBaseUrl: "https://5e48a9-2.myshopify.com",cdnBaseUrl: "https://5e48a9-2.myshopify.com/cdn",surface: "storefront-renderer",enabledBetaFlags: ["web_pixels_async_pixel_refactor","web_pixels_manager_performance_improvement"],webPixelsConfigList: [{"id":"shopify-app-pixel","configuration":"{}","eventPayloadVersion":"v1","runtimeContext":"STRICT","scriptVersion":"0570","apiClientId":"shopify-pixel","type":"APP"},{"id":"shopify-custom-pixel","eventPayloadVersion":"v1","runtimeContext":"LAX","scriptVersion":"0570","apiClientId":"shopify-pixel","type":"CUSTOM"}],initData: {"cart":null,"checkout":null,"customer":null,"productVariants":[{"id":"47280974823722","image":{"src":"\/\/5e48a9-2.myshopify.com\/cdn\/shop\/files\/slot-paling-gacor.jpg?v=1704369833"},"price":{"amount":0.0,"currencyCode":"SGD"},"product":{"id":"8834366964010","title":"Slot Jackpot \ud83d\ude80 TWSLive ✨ Link Daftar Situs Slot Server Luar Negeri Terviral 2024","untranslatedTitle":"Slot Jackpot \ud83d\ude80 TWSLive ✨ Link Daftar Situs Slot Server Luar Negeri Terviral 2024","url":"\/products\/slot-jackpot","vendor":"My Store","type":""},"sku":"","title":"Default Title","untranslatedTitle":"Default Title"}]},},function pageEvents(webPixelsManagerAPI) {webPixelsManagerAPI.publish("page_viewed");webPixelsManagerAPI.publish("product_viewed", {"productVariant":{"id":"47280974823722","image":{"src":"\/\/5e48a9-2.myshopify.com\/cdn\/shop\/files\/slot-paling-gacor.jpg?v=1704369833"},"price":{"amount":0.0,"currencyCode":"SGD"},"product":{"id":"8834366964010","title":"Slot Jackpot \ud83d\ude80 TWSLive ✨ Link Daftar Situs Slot Server Luar Negeri Terviral 2024","untranslatedTitle":"Slot Jackpot \ud83d\ude80 TWSLive ✨ Link Daftar Situs Slot Server Luar Negeri Terviral 2024","url":"\/products\/slot-jackpot","vendor":"My Store","type":""},"sku":"","title":"Default Title","untranslatedTitle":"Default Title"}});},"https://5e48a9-2.myshopify.com/cdn","browser","0.0.412","80cd6a5fw8efabb83pbabe92ddm0cb690ee",["web_pixels_async_pixel_refactor","web_pixels_manager_performance_improvement"]);</script>  <script>window.ShopifyAnalytics = window.ShopifyAnalytics || {};
 window.ShopifyAnalytics.meta = window.ShopifyAnalytics.meta || {};
 window.ShopifyAnalytics.meta.currency = 'SGD';
-var meta = {"product":{"id":8834366964010,"gid":"gid:\/\/shopify\/Product\/8834366964010","vendor":"My Store","type":"","variants":[{"id":47280974823722,"price":0,"name":"TWSLive  🚀  Akun Slot Demo Terbaru Tahun 2024 Tanpa Deposit Anti Rungkad ","public_title":null,"sku":""}]},"page":{"pageType":"product","resourceType":"product","resourceId":8834366964010}};
+var meta = {"product":{"id":8834366964010,"gid":"gid:\/\/shopify\/Product\/8834366964010","vendor":"My Store","type":"","variants":[{"id":47280974823722,"price":0,"name":"TWSLive  🚀  ","public_title":null,"sku":""}]},"page":{"pageType":"product","resourceType":"product","resourceId":8834366964010}};
 for (var attr in meta) {
   window.ShopifyAnalytics.meta[attr] = meta[attr];
 }</script>
@@ -732,8 +732,8 @@ for (var attr in meta) {
       var token = match? match[1]: undefined;
       if (!hasLoggedConversion(token)) {
         setCookieIfConversion(token);
-        window.ShopifyAnalytics.lib.track("Viewed Product",{"currency":"SGD","variantId":47280974823722,"productId":8834366964010,"productGid":"gid:\/\/shopify\/Product\/8834366964010","name":"TWSLive  🚀  Akun Slot Demo Terbaru Tahun 2024 Tanpa Deposit Anti Rungkad ","price":"0.00","sku":"","brand":"My Store","variant":null,"category":"","nonInteraction":true});
-      window.ShopifyAnalytics.lib.track("monorail:\/\/trekkie_storefront_viewed_product\/1.1",{"currency":"SGD","variantId":47280974823722,"productId":8834366964010,"productGid":"gid:\/\/shopify\/Product\/8834366964010","name":"TWSLive  🚀  Akun Slot Demo Terbaru Tahun 2024 Tanpa Deposit Anti Rungkad ","price":"0.00","sku":"","brand":"My Store","variant":null,"category":"","nonInteraction":true,"referer":"https:\/\/5e48a9-2.myshopify.com\/products\/slot-jackpot"});
+        window.ShopifyAnalytics.lib.track("Viewed Product",{"currency":"SGD","variantId":47280974823722,"productId":8834366964010,"productGid":"gid:\/\/shopify\/Product\/8834366964010","name":"TWSLive ✨ Link Daftar Situs Slot Server Luar Negeri Terviral 2024 ","price":"0.00","sku":"","brand":"My Store","variant":null,"category":"","nonInteraction":true});
+      window.ShopifyAnalytics.lib.track("monorail:\/\/trekkie_storefront_viewed_product\/1.1",{"currency":"SGD","variantId":47280974823722,"productId":8834366964010,"productGid":"gid:\/\/shopify\/Product\/8834366964010","name":"TWSLive ✨ Link Daftar Situs Slot Server Luar Negeri Terviral 2024 ","price":"0.00","sku":"","brand":"My Store","variant":null,"category":"","nonInteraction":true,"referer":"https:\/\/5e48a9-2.myshopify.com\/products\/slot-jackpot"});
       }
     });
 
@@ -1347,10 +1347,10 @@ Item added to your cart
                 class="product__text inline-richtext caption-with-letter-spacing"
                 
               >My Store</p><div class="product__title" >
-                <h1>TWSLive  🚀  Akun Slot Demo Terbaru Tahun 2024 Tanpa Deposit Anti Rungkad </h1>
+                <h1>TWSLive ✨ Link Daftar Situs Slot Server Luar Negeri Terviral 2024 </h1>
                 <a href="/products/slot-jackpot" class="product__title">
                   <h2 class="h1">
-                    TWSLive  🚀  Akun Slot Demo Terbaru Tahun 2024 Tanpa Deposit Anti Rungkad 
+                    TWSLive ✨ Link Daftar Situs Slot Server Luar Negeri Terviral 2024 
                   </h2>
                 </a>
               </div><div class="no-js-hidden" id="price-template--21921862189354__main" role="status" >
@@ -1451,7 +1451,7 @@ Item added to your cart
                 <div class="price-per-item__container">
                   <quantity-input class="quantity" data-url="/products/slot-jackpot" data-section="template--21921862189354__main">
                     <button class="quantity__button no-js-hidden" name="minus" type="button">
-                      <span class="visually-hidden">Decrease quantity for TWSLive  🚀  Akun Slot Demo Terbaru Tahun 2024 Tanpa Deposit Anti Rungkad </span>
+                      <span class="visually-hidden">Decrease quantity for TWSLive ✨ Link Daftar Situs Slot Server Luar Negeri Terviral 2024 </span>
                       <svg
   xmlns="http://www.w3.org/2000/svg"
   aria-hidden="true"
@@ -1478,7 +1478,7 @@ Item added to your cart
                       form="product-form-template--21921862189354__main"
                     />
                     <button class="quantity__button no-js-hidden" name="plus" type="button">
-                      <span class="visually-hidden">Increase quantity for TWSLive  🚀  Akun Slot Demo Terbaru Tahun 2024 Tanpa Deposit Anti Rungkad </span>
+                      <span class="visually-hidden">Increase quantity for TWSLive ✨ Link Daftar Situs Slot Server Luar Negeri Terviral 2024 </span>
                       <svg
   xmlns="http://www.w3.org/2000/svg"
   aria-hidden="true"
@@ -1728,7 +1728,7 @@ td {border: 1px solid #cccccc;}br {mso-data-placement:same-cell;}
     srcset="//5e48a9-2.myshopify.com/cdn/shop/files/slot-paling-gacor.jpg?v=1704369833&width=550 550w,//5e48a9-2.myshopify.com/cdn/shop/files/slot-paling-gacor.jpg?v=1704369833 800w"
     sizes="(min-width: 750px) calc(100vw - 22rem), 1100px"
     src="//5e48a9-2.myshopify.com/cdn/shop/files/slot-paling-gacor.jpg?v=1704369833&width=1445"
-    alt="TWSLive  🚀  Akun Slot Demo Terbaru Tahun 2024 Tanpa Deposit Anti Rungkad "
+    alt="TWSLive ✨ Link Daftar Situs Slot Server Luar Negeri Terviral 2024 "
     loading="lazy"
     width="1100"
     height="1100"
@@ -1769,7 +1769,7 @@ td {border: 1px solid #cccccc;}br {mso-data-placement:same-cell;}
     {
       "@context": "http://schema.org/",
       "@type": "Product",
-      "name": "TWSLive  🚀  Akun Slot Demo Terbaru Tahun 2024 Tanpa Deposit Anti Rungkad ",
+      "name": "TWSLive ✨ Link Daftar Situs Slot Server Luar Negeri Terviral 2024 ",
       "url": "https:\/\/5e48a9-2.myshopify.com\/products\/slot-jackpot",
       "image": [
           "https:\/\/5e48a9-2.myshopify.com\/cdn\/shop\/files\/slot-paling-gacor.jpg?v=1704369833\u0026width=1920"
